--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-URL_ENDPOINT=https://meli-macosta08.herokuapp.com
+URL_ENDPOINT="https://meli-macosta08.herokuapp.com"
+ ## "test": "react-scripts test",
