se llama a la variable de entorno

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,1 @@
-URL_ENDPOINT="https://meli-macosta08.herokuapp.com"
- ## "test": "react-scripts test",
+REACT_APP_URL_ENDPOINT=https://meli-macosta08.herokuapp.com
