--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,9 @@
     ]
   },
   "devDependencies": {
-    "jest": "^28.1.1"
+    "@babel/preset-typescript": "^7.17.12",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
